[flake8]
max-line-length = 120
exclude = build,dist,docs/conf.py,*.egg-info

[pytest]
addopts = -s -v --strict --cov surveyor --flakes --pep8
minversion = 2.6
pep8maxlinelength = 120

[wheel]
universal = 1

[metadata]
name = fuel-pdsh
version = 1.0
description-file = README.rst
summary = Simple pure Python alternative to PDSH for OpenStack Fuel node.
author = Sergey Arkhipov
author-email = serge@aerialsounds.org
license = MIT
home-page = https://github.com/9seconds/fuel-pdsh
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    fuelpdsh

[entry_points]
console_scripts =
    fuel-pdsh=fuelpdsh.cli:remote_cmd
    fuel-pdcp=fuelpdsh.cli:cp_to_remote

[global]
setup-hooks =
    pbr.hooks.setup_hook
