[flake8]
max-line-length = 120
exclude = build,dist,docs/conf.py,*.egg-info

[wheel]
universal = 1

[metadata]
name = fuel-pdsh
version = 1.1
description-file = README.rst
summary = Simple pure Python alternative to PDSH for OpenStack Fuel node.
author = Sergey Arkhipov
author-email = serge@aerialsounds.org
license = MIT
home-page = https://github.com/9seconds/fuel-pdsh
requires-python = >=2.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    fuelpdsh

[extras]
threadless =
    gevent

[entry_points]
console_scripts =
    fuel-pdsh=fuelpdsh.cli:remote_cmd
    fuel-pdcp=fuelpdsh.cli:cp_to_remote

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[global]
setup-hooks =
    pbr.hooks.setup_hook
