[flake8]
max-line-length = 120
exclude = build,dist,docs/conf.py,*.egg-info

[wheel]
universal = 0

[metadata]
name = fuel-pdsh
version = 2.0
description-file = README.rst
summary = Simple pure Python alternative to PDSH for OpenStack Fuel node.
author = Sergey Arkhipov
author-email = serge@aerialsounds.org
license = MIT
home-page = https://github.com/9seconds/fuel-pdsh
requires-python = >=3.4
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    fuelpdsh

[entry_points]
console_scripts =
    fuel-pdsh=fuelpdsh.cli:remote_cmd
    fuel-fetch=fuelpdsh.cli:fetch_cmd
    fuel-pull=fuelpdsh.cli:pull_cmd

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[global]
setup-hooks =
    pbr.hooks.setup_hook
